export default class RenderManagerInterface {
  reRenderView() {}
}